= 3.75.0 (2023-12-14)

* Add cookie_flags plugin, for overriding, warning, or raising for incorrect cookie flags (jeremyevans)

= 3.74.0 (2023-11-13)

* Add redirect_http_to_https plugin, helping to ensure future requests from the browser are submitted via HTTPS (jeremyevans)

= 3.73.0 (2023-10-13)

* Support :next_if_not_found option for middleware plugin (jeremyevans) (#334)

* Remove dependency on base64 library from sessions and route_csrf plugin, as it will not be part of the standard library in Ruby 3.4+ (jeremyevans)

= 3.72.0 (2023-09-12)

* Add invalid_request_body plugin for custom handling of invalid request bodies (jeremyevans)

* Warn when defining method that expects 1 argument when block requires multiple arguments when :check_arity option is set to :warn (jeremyevans)

* Implement the match_hooks plugin using the match_hook_args plugin (jeremyevans)

= 3.71.0 (2023-08-14)

* Add match_hook_args plugin, similar to match_hooks but support matchers and block args as hook arguments (jeremyevans)

= 3.70.0 (2023-07-12)

* Add plain_hash_response_headers plugin, using a plain hash for response headers on Rack 3 for much better performance (jeremyevans)

* Use lower case response header keys by default on Rack 3, instead of relying on Rack::Headers conversion (jeremyevans)

= 3.69.0 (2023-06-13)

* Allow symbol_matcher in symbol_matchers plugin to take a block to allow type conversion (jeremyevans)

= 3.68.0 (2023-05-11)

* Make Roda.run in multi_run plugin accept blocks to allow autoloading the apps to dispatch to (jeremyevans)

= 3.67.0 (2023-04-12)

* Add custom_block_results plugin for registering custom block result handlers (jeremyevans)

= 3.66.0 (2023-03-13)

* Support overriding exception page assets via exception_page_{css,js} instance methods (jeremyevans) (#306)

* Avoid keeping reference to Roda instance that caches an inline template (jeremyevans)
