@@ -33,6 +33,7 @@
       <li><a href="rdoc/classes/Roda/RodaPlugins/AutoloadNamedRoutes.html">autoload_named_routes</a>: Allows autoloading file for a named route when there is a request for that route.</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/AllVerbs.html">all_verbs</a>: Adds request routing methods for all http verbs.</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/BacktrackingArray.html">backtracking_array</a>: Allows array matchers to backtrack if later matchers do not match.</li>
+      <li><a href="rdoc/classes/Roda/RodaPlugins/Break.html">break</a>: Supports break inside routing blocks for skipping the current matching route block as if it didn't match.</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/ClassLevelRouting.html">class_level_routing</a>: Adds class level routing methods, for a DSL similar to <a href="https://github.com/sinatra/sinatra">sinatra</a>.</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/ErrorHandler.html">error_handler</a>: Adds ability to automatically handle errors raised by the application.</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/HashBranches.html">hash_branches</a>: Supports O(1) dispatching to multiple branches at all levels in the routing tree.</li>
